deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: k8
  labels:
    app: k8-app
spec:
  replicas: 3
  selector:
    matchLabels:
      app: k8-app
  template:
    metadata:
      labels:
        app: k8-app
    spec:
      containers:
      - name: k8-project-app
        image: 291611055451.dkr.ecr.ap-south-1.amazonaws.com/new:SAMPLE-PROJECT-24
        imagePullPolicy: Always
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: k8-app
    k8s-app: k8-app
  name: k8-app
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 80
  type: LoadBalancer
  selector:
    app: k8-app
